# dj-shop-cart

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  usage.md
example/: pyproject.toml
example/example/: settings.py  urls.py
tests/: test_cart.py
