[project]
name = "example"
version = "0.1.1"
description = ""
authors = [{ name = "Tobi DEGNON", email = "degnonfrancis@gmail.com" }]
requires-python = ">=3.10,<4"
dependencies = ["Django>=5.2"]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
